--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,4 @@
 FROM java:8
 EXPOSE 8080
-ADD /target/MessagingApp.jar MessagingApp.jar
-ENTRYPOINT ["java","-jar","MessagingApp.jar"]
+ADD /target/ResponseTabMessagingApp.jar ResponseTabMessagingApp.jar
+ENTRYPOINT ["java","-jar","ResponseTabMessagingApp.jar"]
